--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,13 +100,14 @@ jobs:
           URL: ${{ env.project_url }}
           MANIFEST: ${{ env.latest_manifest_url }}
           DOWNLOAD: ${{ env.release_module_url }}
-
+      
       - name: Build release
         uses: actions/setup-node@v4
         with:
           node-version: 20
-        run: npm ci
-        run: npm run build:full
+        run: |
+          npm ci
+          npm run build:full
 
 
       # Create a "module.zip" archive containing all the module's required files.
