--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,7 +109,7 @@ jobs:
       - name: Build package
         run: |
           npm ci
-          npm run build:full
+          npm run build:all
 
 
       # Create a "module.zip" archive containing all the module's required files.
