WIP adding models, templates, applications for listing and sheet

--- a/package.json
+++ b/package.json
@@ -21,19 +21,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:all": "npm run clean && npm run build:scripts && npm run build:styles && npm run build:languages",
     "build:scripts": "tsc",
-    "build:styles": "cp -r src/styles dist/",
+    "build:static": "node copyStatic.mjs",
     "build:languages": "cp -r src/languages dist/",
-    "watch:all": "concurrently \"npm run watch:scripts\" \"npm run watch:styles\" \"npm run watch:languages\"",
+    "watch:all": "concurrently \"npm run watch:scripts\" \"npm run watch:static\"",
     "watch:scripts": "tsc --watch",
-    "watch:styles": "nodemon -L --watch src/styles -e css --exec 'npx rimraf ./dist/styles/* && npm run build:styles'",
-    "watch:languages": "nodemon -L --watch src/languages -e css --exec 'npx rimraf ./dist/languages/* && npm run build:languages'",
+    "watch:static": "nodemon -L --watch 'src/*' --ignore src/scripts/ -e css,js,json,html --exec 'node copyStatic.mjs'",
     "clean": "rimraf ./dist/*"
   },
   "devDependencies": {
     "@inquirer/prompts": "^7.2.1",
     "chalk": "^5.4.1",
     "concurrently": "^9.1.2",
-    "fvtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#main",
+    "@league-of-foundry-developers/fvtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#main",
     "git-url-parse": "^16.0.0",
     "globby": "^14.0.2",
     "nodemon": "^3.1.9",
