--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:languages": "cp -r src/languages dist/",
     "watch:all": "concurrently \"npm run watch:scripts\" \"npm run watch:static\"",
     "watch:scripts": "tsc --watch",
-    "watch:static": "nodemon -L --watch 'src/*' --ignore src/scripts/ -e css,js,json,html --exec 'node copyStatic.mjs'",
+    "watch:static": "nodemon -L --watch 'src/*' --ignore src/scripts/ -e css,js,json,html,hbs --exec 'node copyStatic.mjs'",
     "clean": "rimraf ./dist/*"
   },
   "devDependencies": {
