--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "main": "dist/module.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:all": "npm run clean && npm run build:scripts && npm run build:styles && npm run build:languages",
+    "build:all": "npm run clean && npm run build:scripts && npm run build:static",
     "build:scripts": "tsc",
     "build:static": "node copyStatic.mjs",
     "build:languages": "cp -r src/languages dist/",
